--- a/res/layout/activity_calendar_sale.xml
+++ b/res/layout/activity_calendar_sale.xml
@@ -45,6 +45,123 @@
              android:onClick="onClickSetDateNext" />
        
     </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+         
+        <LinearLayout
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+			android:layout_weight="1"
+	        android:orientation="vertical" >
+	        
+            <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		        <TextView 
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="순매출 합계 : " />
+		        
+		        <TextView 
+					android:id="@+id/textViewTop1"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="10dp"
+					android:gravity="right"
+					android:text="0" />
+            </LinearLayout>
+	        
+            <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		        <TextView 
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="일평균매출 합계 : " />
+		        
+		        <TextView 
+					android:id="@+id/textViewTop2"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="10dp"
+					android:gravity="right"
+					android:text="0" />
+		        </LinearLayout>
+		        
+            <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+	            <TextView 
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="일평균 객단가 : " />	        
+		        
+		        <TextView 
+					android:id="@+id/textViewTop3"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="10dp"
+					android:gravity="right"
+					android:text="0" />
+		        </LinearLayout>
+	        </LinearLayout>
+       
+        <LinearLayout
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+			android:layout_weight="1"
+	        android:orientation="vertical" >
+	        
+            <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		        <TextView 
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="일평균 객수 : " />	        
+		        
+		        <TextView 
+					android:id="@+id/textViewTop4"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="10dp"
+					android:gravity="right"
+					android:text="0" />
+	        
+	        </LinearLayout>
+	        
+            <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		        
+		        <TextView 
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="순매입액 합계 : " />
+		        
+		        <TextView 
+					android:id="@+id/textViewTop5"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="10dp"
+					android:gravity="right"
+					android:text="0" />
+		        </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
             
 	<LinearLayout
         android:layout_width="match_parent"
@@ -52,16 +169,15 @@
         android:orientation="vertical"
          >
 	
-		<tipsystem.utils.CalendarView android:id="@+id/calendarView1"
-	         android:layout_width="match_parent"
-	         android:layout_height="wrap_content"
-	         android:showWeekNumber="true"		            
-	         />
-	        
+		<tipsystem.utils.CalendarView
+		    android:id="@+id/calendarView1"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:showWeekNumber="true" />
 	</LinearLayout>  
 	
 	<LinearLayout
-		android:layout_marginTop="20dp"
+		android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
