--- a/res/layout/activity_customer_purchase_payment_detail.xml
+++ b/res/layout/activity_customer_purchase_payment_detail.xml
@@ -148,8 +148,7 @@
        >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="110dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -170,8 +169,7 @@
         />
         <TextView android:id="@+id/item3"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="80dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -181,8 +179,7 @@
         />
         <TextView android:id="@+id/item4"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="80dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
