--- a/res/layout/activity_listview_compare_list.xml
+++ b/res/layout/activity_listview_compare_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="45dp"
+    android:gravity="center|center_vertical"
     android:orientation="horizontal" >
     
     <!-- 바코드 -->
@@ -21,7 +22,7 @@
     <TextView android:id="@+id/item3"
         android:layout_width="70dp"
         android:layout_height="fill_parent"
-        android:gravity="right"
+        android:gravity="right|center_vertical"
 	        />
 
     <ImageView
@@ -34,7 +35,7 @@
     <TextView android:id="@+id/item4"
         android:layout_width="70dp"
         android:layout_height="fill_parent"
-        android:gravity="right"
+        android:gravity="right|center_vertical"
     />
    
     <ImageView
