--- a/res/layout/activity_listview_customer_list.xml
+++ b/res/layout/activity_listview_customer_list.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="45dp"
+    android:gravity="center|center_vertical"
     android:orientation="horizontal" >
     
     <TextView android:id="@+id/item1"
         android:text="코드"
         android:layout_height="fill_parent"
-        android:layout_width="0dip"
-        android:layout_weight="1"
+        android:layout_width="60dp"
         android:gravity="center"
     />
     <TextView android:id="@+id/item2"
