--- a/res/layout/activity_listview_item4_1.xml
+++ b/res/layout/activity_listview_item4_1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="45dp"
+    android:gravity="center|center_vertical"
     android:orientation="horizontal" >
     
     <!-- 바코드 -->
@@ -21,12 +22,12 @@
     <TextView android:id="@+id/item3"
         android:layout_width="80dp"
         android:layout_height="fill_parent"
-        android:gravity="right"
+        android:gravity="right|center_vertical"
     />
     <!-- 4 -->
     <TextView android:id="@+id/item4"
         android:layout_width="60dp"
         android:layout_height="fill_parent"
-        android:gravity="right"
+        android:gravity="center"
     />
 </LinearLayout>
