--- a/res/layout/activity_manage_customer_list.xml
+++ b/res/layout/activity_manage_customer_list.xml
@@ -37,8 +37,7 @@
         >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="0.7"
+            android:layout_width="60dp"
             android:text="코드"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
