--- a/res/layout/activity_manage_product_list.xml
+++ b/res/layout/activity_manage_product_list.xml
@@ -20,8 +20,7 @@
 
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="0.7"
+            android:layout_width="110dp"
             android:text="바코드"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
@@ -33,7 +32,7 @@
         />
         <TextView android:id="@+id/item2"
             android:layout_height="fill_parent"
-            android:layout_width="0dip"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:text="상품명"
 			android:textColor="#d7d7d7"
@@ -46,8 +45,7 @@
         />
         <TextView android:id="@+id/item3"
             android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
+            android:layout_width="80dp"
             android:text="매입가"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
@@ -59,8 +57,7 @@
         />
         <TextView android:id="@+id/item4"
             android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
+            android:layout_width="80dp"
             android:text="판매가"
             android:textColor="#d7d7d7"
             android:textStyle="bold"
