--- a/res/layout/activity_purchase_list_detail_view.xml
+++ b/res/layout/activity_purchase_list_detail_view.xml
@@ -19,8 +19,7 @@
 
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="110dp"			
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -30,7 +29,7 @@
         />
         <TextView android:id="@+id/item2"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
+			android:layout_width="0dp"
 			android:layout_weight="1"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
@@ -41,8 +40,7 @@
         />
         <TextView android:id="@+id/item3"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="80dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -52,8 +50,7 @@
         />
         <TextView android:id="@+id/item4"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="80dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
@@ -63,8 +60,7 @@
         />
         <TextView android:id="@+id/item5"
             android:layout_height="fill_parent"
-			android:layout_width="0dip"
-			android:layout_weight="1"
+			android:layout_width="40dp"
 			android:textColor="#d7d7d7"
 			android:textStyle="bold"
 			android:textSize="14sp"
