--- a/res/layout/activity_sales_news.xml
+++ b/res/layout/activity_sales_news.xml
@@ -382,8 +382,7 @@
                     
 	                    <TextView android:id="@+id/item5"
 				            android:layout_height="fill_parent"
-            				android:layout_width="0dip"
-            				android:layout_weight="1"
+            				android:layout_width="70dp"
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
@@ -393,7 +392,7 @@
 				        />
 				        <TextView android:id="@+id/item6"
 				            android:layout_height="fill_parent"
-            				android:layout_width="0dip"
+            				android:layout_width="0dp"
             				android:layout_weight="1"
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
@@ -404,8 +403,7 @@
 				        />
 				        <TextView android:id="@+id/item7"
 				            android:layout_height="fill_parent"
-            				android:layout_width="0dip"
-            				android:layout_weight="1"
+            				android:layout_width="80dp"
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
@@ -415,8 +413,7 @@
 				        />
 				        <TextView android:id="@+id/item8"
 				            android:layout_height="fill_parent"
-            				android:layout_width="0dip"
-            				android:layout_weight="1"
+            				android:layout_width="80dp"
             				android:textColor="#d7d7d7"
 				            android:textStyle="bold"
 				            android:textSize="14sp"
