--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -83,8 +83,6 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="number"
             android:singleLine="true"
@@ -104,8 +102,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="text"
             android:singleLine="true"
@@ -136,10 +132,8 @@
              android:layout_weight="1"
              android:ems="10"
              android:textSize="14sp"
-             android:textColor="#000000"
              android:inputType="number"
-             android:singleLine="true"
-             android:background="@drawable/white_text_box_small" />
+             android:singleLine="true" />
 
          <Button
 	        android:id="@+id/buttonBarcode"
@@ -166,10 +160,8 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
-	        android:textColor="#000000"
 	        android:inputType="text"
 	        android:singleLine="true"
-            android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp" />
     </LinearLayout>
 
