--- a/res/layout/activity_purchase_regist.xml
+++ b/res/layout/activity_purchase_regist.xml
@@ -80,8 +80,6 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="number"
 		    android:singleLine="true"
@@ -102,14 +100,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:textColor="#000000"
 		    android:singleLine="true"
 	        android:clickable="false" 
 		    android:cursorVisible="false" 
 		    android:focusable="false" 
 		    android:focusableInTouchMode="false"
 		    android:lines="1"
-            android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:ems="10" />
     
@@ -139,11 +135,9 @@
              android:layout_weight="1"
              android:ems="10"
              android:textSize="14sp"
-             android:textColor="#000000"
              android:inputType="number"
 		     android:singleLine="true"
-		     android:lines="1"
-             android:background="@drawable/white_text_box_small" />
+		     android:lines="1" />
              
          <requestFocus />
         
@@ -173,7 +167,6 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
-	        android:textColor="#000000"
 		    android:singleLine="true"
 		    android:lines="1"
             android:inputType="text"   
@@ -181,7 +174,6 @@
 		    android:cursorVisible="false" 
 		    android:focusable="false" 
 		    android:focusableInTouchMode="false"
-            android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp" />       
     
     </LinearLayout>
@@ -210,11 +202,9 @@
             android:layout_weight="1"
             android:ems="10"
             android:textSize="14sp"
-            android:textColor="#000000"
 		    android:singleLine="true"
 		    android:inputType="number"
-		    android:lines="1"
-            android:background="@drawable/white_text_box_small" />
+		    android:lines="1" />
        
         <TextView
             android:id="@+id/textView7"
@@ -233,11 +223,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
-	        android:textColor="#000000"
 		    android:singleLine="true"
 		    android:inputType="number"
 		    android:lines="1"
-            android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp"
 	     />       
     
@@ -269,9 +257,7 @@
             android:textSize="14sp"
             android:inputType="number"
 		    android:singleLine="true"
-		    android:lines="1"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small" />
+		    android:lines="1" />
         
         <TextView
             android:id="@+id/textView9"
@@ -290,11 +276,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
-	        android:textColor="#000000"
             android:inputType="number"
 		    android:singleLine="true"
 		    android:lines="1"
-            android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp"/>
          
     </LinearLayout>
