--- a/res/layout/activity_manage_sales.xml
+++ b/res/layout/activity_manage_sales.xml
@@ -95,7 +95,6 @@
              android:layout_weight="1"
              android:ems="10"
              android:textSize="14sp"
-             android:textColor="#000000"
              android:inputType="number"
              android:singleLine="true"/>
         
@@ -124,7 +123,6 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
-	        android:textColor="#000000"
 	        android:textSize="14sp"
 	        android:inputType="text"
 	        android:singleLine="true" />
@@ -154,7 +152,6 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
             android:textSize="14sp"
             android:inputType="number"
             android:ems="10"
@@ -174,7 +171,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:textColor="#000000"
             android:textSize="14sp"
             android:inputType="text"
             android:ems="10"
@@ -253,51 +249,96 @@
                     android:orientation="vertical" >
                     
                     <LinearLayout android:id="@+id/header1"
-				        android:layout_height="wrap_content"
 				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:orientation="horizontal"
 				        >
+				        
+				        <LinearLayout 
+					        android:layout_width="0dp"
+					        android:layout_height="wrap_content"
+					        android:layout_weight="1"
+					        android:orientation="vertical"
+					        >						        
+		                    <TextView android:id="@+id/item1"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="@drawable/gray_bar_bg"
+					            android:text="코드"
+					        />
+					        <TextView android:id="@+id/item2"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="#4c566d"
+					            android:text="거래처명"
+					        />
+					        </LinearLayout>
+				         
+				        <LinearLayout 
+					        android:layout_width="0dp"
+					        android:layout_height="wrap_content"
+					        android:layout_weight="1"
+					        android:orientation="vertical"
+					        >
+						        
+						    <TextView android:id="@+id/item3"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="@drawable/gray_bar_bg"
+					            android:text="순매출"
+					        />
+						    <TextView android:id="@+id/item4"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="@drawable/gray_bar_bg"
+					            android:text="이익금"
+					        />
+						    </LinearLayout>
                     
-	                    <TextView android:id="@+id/item1"
-				            android:layout_height="fill_parent"
-            				android:layout_width="60dp"
-            				android:textColor="#d7d7d7"
-				            android:textStyle="bold"
-				            android:textSize="14sp"
-				            android:gravity="center"
-				            android:background="@drawable/gray_bar_bg"
-				            android:text="코드"
-				        />
-				        <TextView android:id="@+id/item2"
-				            android:layout_height="fill_parent"
-            				android:layout_width="0dp"
-            				android:layout_weight="1"
-            				android:textColor="#d7d7d7"
-				            android:textStyle="bold"
-				            android:textSize="14sp"
-				            android:gravity="center"
-				            android:background="@drawable/gray_bar_bg"
-				            android:text="거래처명"
-				        />
-				        <TextView android:id="@+id/item3"
-				            android:layout_height="fill_parent"
-            				android:layout_width="80dp"
-            				android:textColor="#d7d7d7"
-				            android:textStyle="bold"
-				            android:textSize="14sp"
-				            android:gravity="center"
-				            android:background="@drawable/gray_bar_bg"
-				            android:text="순매출"
-				        />
-				        <TextView android:id="@+id/item4"
-				            android:layout_height="fill_parent"
-            				android:layout_width="80dp"
-            				android:textColor="#d7d7d7"
-				            android:textStyle="bold"
-				            android:textSize="14sp"
-				            android:gravity="center"
-				            android:background="@drawable/gray_bar_bg"
-				            android:text="이익금"
-				        />
+				        <LinearLayout 
+					        android:layout_width="0dp"
+					        android:layout_height="wrap_content"
+					        android:layout_weight="1"
+					        android:orientation="vertical"
+					        >
+						    <TextView android:id="@+id/item5"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="@drawable/gray_bar_bg"
+					            android:text="이익률"
+					        />
+						    <TextView android:id="@+id/item6"
+	            				android:layout_width="fill_parent"
+					            android:layout_height="wrap_content"
+	            				android:textColor="#d7d7d7"
+					            android:textStyle="bold"
+					            android:textSize="14sp"
+					            android:gravity="center"
+					            android:background="@drawable/gray_bar_bg"
+					            android:text="점유율"
+					        />
+						    </LinearLayout>
+				        
 					</LinearLayout>
 				
 				    <!-- List Divider -->
