--- a/res/layout/activity_manage_stock.xml
+++ b/res/layout/activity_manage_stock.xml
@@ -63,7 +63,9 @@
             android:layout_weight="0.8"
             android:inputType="number"
             android:ems="10"
-            android:textSize="12sp"  />
+            android:textSize="12sp"
+		    android:singleLine="true"
+		    android:lines="1"  />
         
          <Button
 	        android:id="@+id/buttonBarcode"
@@ -90,6 +92,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="text"
+		    android:singleLine="true"
+		    android:lines="1"
             android:ems="10"
             android:textSize="14sp"              
 	        android:clickable="false" 
@@ -123,6 +127,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
+		    android:singleLine="true"
+		    android:lines="1"
             android:ems="10"
 	        android:clickable="false" 
 		    android:cursorVisible="false" 
@@ -147,6 +153,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
+		    android:singleLine="true"
+		    android:lines="1"
             android:ems="10"
             android:textSize="14sp"  
 	        android:clickable="false" 
@@ -180,6 +188,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
+		    android:singleLine="true"
+		    android:lines="1"
             android:ems="10"
             android:textSize="14sp" />
         
@@ -199,6 +209,8 @@
              android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+		    android:singleLine="true"
+		    android:lines="1"
             android:inputType="number"
 	        android:clickable="false" 
 		    android:cursorVisible="false" 
